; ModuleID = '/home/carl/AnghaBench/rufus/src/libcdio/driver/extr__cdio_stdio.c_cdio_stdio_new.c'
source_filename = "/home/carl/AnghaBench/rufus/src/libcdio/driver/extr__cdio_stdio.c_cdio_stdio_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32, i32, i32, i32, i32, i32*, i32*, i32*, i32*, i32*, i32* }
%struct.TYPE_7__ = type { i8*, i32 }
%struct.CDIO_STAT_STRUCT = type { i32 }

@.str = private unnamed_addr constant [42 x i8] c"could not retrieve file info for `%s': %s\00", align 1
@errno = common dso_local global i32 0, align 4
@_stdio_open = common dso_local global i32 0, align 4
@_stdio_seek = common dso_local global i32 0, align 4
@_stdio_stat = common dso_local global i32 0, align 4
@_stdio_read = common dso_local global i32 0, align 4
@_stdio_close = common dso_local global i32 0, align 4
@_stdio_free = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @cdio_stdio_new(i8* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_6__, align 8
  %6 = alloca %struct.TYPE_7__*, align 8
  %7 = alloca %struct.CDIO_STAT_STRUCT, align 4
  %8 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i32* null, i32** %4, align 8
  %9 = bitcast %struct.TYPE_6__* %5 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %9, i8 0, i64 72, i1 false)
  store %struct.TYPE_7__* null, %struct.TYPE_7__** %6, align 8
  %10 = load i8*, i8** %3, align 8
  %11 = icmp eq i8* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %58

13:                                               ; preds = %1
  %14 = load i8*, i8** %3, align 8
  %15 = call i8* @_cdio_strdup_fixpath(i8* %14)
  store i8* %15, i8** %8, align 8
  %16 = load i8*, i8** %8, align 8
  %17 = icmp eq i8* %16, null
  br i1 %17, label %18, label %19

18:                                               ; preds = %13
  store i32* null, i32** %2, align 8
  br label %58

19:                                               ; preds = %13
  %20 = load i8*, i8** %8, align 8
  %21 = call i32 @CDIO_STAT_CALL(i8* %20, %struct.CDIO_STAT_STRUCT* %7)
  %22 = icmp eq i32 %21, -1
  br i1 %22, label %23, label %30

23:                                               ; preds = %19
  %24 = load i8*, i8** %8, align 8
  %25 = load i32, i32* @errno, align 4
  %26 = call i32 @strerror(i32 %25)
  %27 = call i32 @cdio_warn(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i8* %24, i32 %26)
  %28 = load i8*, i8** %8, align 8
  %29 = call i32 @cdio_free(i8* %28)
  store i32* null, i32** %2, align 8
  br label %58

30:                                               ; preds = %19
  %31 = call %struct.TYPE_7__* @calloc(i32 1, i32 16)
  store %struct.TYPE_7__* %31, %struct.TYPE_7__** %6, align 8
  %32 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %33 = icmp ne %struct.TYPE_7__* %32, null
  %34 = zext i1 %33 to i32
  %35 = call i32 @cdio_assert(i32 %34)
  %36 = load i8*, i8** %8, align 8
  %37 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %38 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %37, i32 0, i32 0
  store i8* %36, i8** %38, align 8
  %39 = getelementptr inbounds %struct.CDIO_STAT_STRUCT, %struct.CDIO_STAT_STRUCT* %7, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %42 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %41, i32 0, i32 1
  store i32 %40, i32* %42, align 8
  %43 = load i32, i32* @_stdio_open, align 4
  %44 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 5
  store i32 %43, i32* %44, align 4
  %45 = load i32, i32* @_stdio_seek, align 4
  %46 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 4
  store i32 %45, i32* %46, align 8
  %47 = load i32, i32* @_stdio_stat, align 4
  %48 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 3
  store i32 %47, i32* %48, align 4
  %49 = load i32, i32* @_stdio_read, align 4
  %50 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 2
  store i32 %49, i32* %50, align 8
  %51 = load i32, i32* @_stdio_close, align 4
  %52 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 1
  store i32 %51, i32* %52, align 4
  %53 = load i32, i32* @_stdio_free, align 4
  %54 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 0
  store i32 %53, i32* %54, align 8
  %55 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %56 = call i32* @cdio_stream_new(%struct.TYPE_7__* %55, %struct.TYPE_6__* %5)
  store i32* %56, i32** %4, align 8
  %57 = load i32*, i32** %4, align 8
  store i32* %57, i32** %2, align 8
  br label %58

58:                                               ; preds = %30, %23, %18, %12
  %59 = load i32*, i32** %2, align 8
  ret i32* %59
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i8* @_cdio_strdup_fixpath(i8*) #2

declare dso_local i32 @CDIO_STAT_CALL(i8*, %struct.CDIO_STAT_STRUCT*) #2

declare dso_local i32 @cdio_warn(i8*, i8*, i32) #2

declare dso_local i32 @strerror(i32) #2

declare dso_local i32 @cdio_free(i8*) #2

declare dso_local %struct.TYPE_7__* @calloc(i32, i32) #2

declare dso_local i32 @cdio_assert(i32) #2

declare dso_local i32* @cdio_stream_new(%struct.TYPE_7__*, %struct.TYPE_6__*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
